# hxtio

./: .gitignore  CMakeLists.txt  HXTArrays.hpp  HXTIO-Example.cpp  HXTIO-OpenCV.cpp  HXTIO.cpp  HXTIO.hpp  HXTIOTest.cpp
examples/: HXTIO-Example.cpp  HXTIO-OpenCV.cpp
include/: HXTIO.hpp  yanda.hpp
python/: calibFrame.py  readframe.py  singleFrame.py
python/Config/: 500V_28C_Grads.txt  500V_28C_Inters.txt  500V_28C_Thresh.txt
src/: HXTIO.cpp
